--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -39,7 +39,7 @@
     }
 
     strong {
-        display: flex;
+        display: block;
         margin-top: 2rem;
         font: 600 1.25rem Lexend, sans-serif;
         line-height: 1.75rem;
@@ -56,7 +56,7 @@
 .emptyPlayer {
     width: 100%;
     height: 20rem;
-    border: 1.5rem dashed var(--purple-300);
+    border: 0.1rem dashed var(--purple-300);
     border-radius: 1.5rem;
     background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
 
@@ -108,10 +108,11 @@
         
         &:disabled {
             cursor: default;
+            opacity: 0.5;
         }
 
         &:hover:not(:disabled) {
-            filter: brightness(0.8);
+            filter: brightness(0.7);
         }
 
         &.isActive {
@@ -129,7 +130,7 @@
             background: var(--purple-400);
         }
 
-        &:hover:not(:disabled) {
+        &:hover:not(disabled) {
             filter: brightness(0.95);
         }
     }
