--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,9 @@
     --purple-400: #9164FA; 
     --purple-500: #8257E5;
     --purple-800: #6F48C9;
+
+    --dark-background: #2c1f2c;
+    --dark-box: #2c292c;
 }
 
 @media (max-width: 1366px) {
