--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -22,6 +22,25 @@
         margin-top: 3rem;
         margin-bottom: 1.5rem;
     }
+
+    ::-webkit-scrollbar {
+        width: 10px;
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+      
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #888;
+      }
+      
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
 }
 
 .latestEpisodes {
