NLW5-Volume Controller and Transition Mode

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -135,3 +135,30 @@
         }
     }
 }
+
+.volumeController {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0.8rem;
+    margin-bottom: 0.8rem;
+    gap: 1.5rem;
+  
+    button {
+      background: transparent;
+      border: 0;
+      font-size: 0;
+  
+      transition: filter 0.2s;
+  
+      &:disabled {
+        opacity: .5;
+        cursor: default;
+      }
+  
+      &:hover:not(:disabled) {
+        filter: brightness(0.7);
+      }
+    }
+  }
+  
